--- a/lscom/src/index.css
+++ b/lscom/src/index.css
@@ -1,15 +1,28 @@
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Roboto+Slab:wght@900&family=Source+Sans+Pro&display=swap');
+
+
+
+
+header,
+h1,
+h2,
+h3 {
+	font-family: 'Roboto Slab', serif;
+	font-weight: 500;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: 'Source Sans Pro', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace; 
+  font-family: source-code-pro, 'Courier New', monospace; 
 }
 
 label {
@@ -19,11 +32,11 @@ label {
 
 
 
+
 /* APP */
 
 .App {
   text-align: center;
-  font-family: roboto, sans-serif;
 }
 
 #contentSpacer {
@@ -50,7 +63,6 @@ label {
 /* NAV / TABS */
 
 #navContainer {
-  font-family: 'roboto', 'sans-serif';
   font-size: clamp(16pt, 10vw, 24pt);
   text-align: center;
   vertical-align: middle;
@@ -92,7 +104,10 @@ label {
   width: 2.5em; 
   border-width: 0px;
   
-  font: inherit;
+  
+	font-family: 'Roboto Slab', serif;
+	font-weight: 900;
+	font-size: 100%;
   line-height: 0px;
   text-align: center;
   vertical-align: middle;
@@ -120,10 +135,12 @@ label {
   border-width: 0px;
   
   height: inherit;
-  font: inherit;
+  	font-family: 'Roboto Slab', serif;
+	font-weight: 900;
+	font-size: 100%;
   text-align: center;
-  vertical-align: middle;
-  line-height: 2.5ex;
+  vertical-align: top;
+  line-height: 1ex;
 }
 
 #tabContainer {
@@ -131,6 +148,8 @@ label {
   color: lightgray;
   vertical-align: middle;
   font-size: 60%;
+  font-family: 'Roboto Slab';
+  font-weight: 500;
   
   --background-color: #2a2a55;
   background-color: #9999AA;
@@ -257,7 +276,7 @@ a.HiderNotHidden {
 	display: none;
 }
 
-.UtitleContainer .UtitleText
+.UtitleContainer .UtitleText,
 .UtitleContainer .UtitleTitle {
 	color: inherit;
 }
