--- a/lscom/src/index.css
+++ b/lscom/src/index.css
@@ -46,6 +46,16 @@ a:link:hover {
 	color: pink;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    color: lightgray;
+    background-color: #333344; 
+  }
+  #navContainer {
+    color: #22222D;
+  }
+}
+
 
 
 
