--- a/lscom/public/numbergame.css
+++ b/lscom/public/numbergame.css
@@ -1,7 +1,7 @@
 
 * {
 	text-align: center;
-	font-size: 16pt;
+	font-size: 14pt;
 	font-family: 'Courgette', cursive;
 	color: #B2B2B2;
 	background-color: #4C4C4C;
@@ -37,9 +37,10 @@ input {
 }
 
 .score {
-	display: inline;
+	display: inline-block;
 	margin-left: 0.5em;
 	margin-right: 0.5em;
+	line-height: 0;
 }
 
 .currentOperation {
@@ -61,6 +62,7 @@ input {
 }
 
 .operationButton {
+	font-size: 20pt;
 	width: 80%;
 	font-weight: bold;
 }
